<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Електронско наддавање</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Електронско наддавање</string>
    <string name="username_hint">Корисничко име</string>
    <string name="password_hint">Лозинка</string>
    <string name="greeting_text">Добредојдовте во најбезбедната апликација за наддавање на целиот свет.</string>
    <string name="login_button">Најави се</string>
    <string name="register_button">Регистрирај се</string>
    <string name="loginAdmin_button">Најави се како администратор</string>
    <string name="title_activity_register">Регистрација</string>
    <string name="first_name_hint">Име</string>
    <string name="last_name_hint">Презиме</string>
    <string name="email_hint">Email</string>
    <string name="repeat_password_hint">Повторно внеси лозинка</string>
    <string name="register_head_text">Ве молиме пополнете ги следните информации.</string>
    <string name="birth_hint">Дата на раѓање</string>
    <string name="credit_hint">Кредит</string>
    <string name="title_activity_profile">Мој профил</string>
    <string name="save_changes">Зачувај промени</string>
    <string name="won_auctions">Победени аукции</string>
    <string name="my_auctions">Мои аукции</string>
    <string name="my_profile">Мој профил</string>
    <string name="log_out">Одјави се</string>
    <string name="title_activity_single_auction">SingleAuctionActivity</string>
    <string name="enter_auction">Влез</string>
    <string name="exit_auction">Излез</string>
    <string name="title_activity_my_auctions">Мои аукции</string>
    <string name="btn_show_finished">Сите аукции</string>
    <string name="btn_hide_finished">Активни</string>
    <string name="btn_add_auction">Додај аукција</string>
    <string name="txt_current_price">Моментално постигната цена:</string>
    <string name="btn_rise">Зголеми</string>
    <string name="btn_check_entrants">Разгледај учесници</string>
    <string name="txt_item_name">Име на аукциски предмет:</string>
    <string name="txt_item_description">Опис:</string>
    <string name="title_activity_add_auction">Нова аукција</string>
    <string name="auction_name_hint">Име на аукција</string>
    <string name="current_price_hint">Почетна цена на аукцијата</string>
    <string name="auction_start_date_hint">Почетна дата на аукцијата</string>
    <string name="auction_end_date_hint">Крајна дата на аукцијата</string>
    <string name="auction_item_name_hint">Име на предметот</string>
    <string name="auction_item_description_hint">Опис на предметот</string>
    <string name="new_auction_button">Додаj аукција</string>
    <!-- <string name="url_address">https://spiritbreakers.com.mk:8443/OnlineBidding</string> -->
    <string name="url_address">http://192.168.0.101:8080/OnlineBidding</string>
    <string name="title_activity_list_entered">Учесници во аукцијата</string>
    <string name="title_activity_main_administrator">Администратор</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_view">Text View</string>
    <string name="img_contentDescription">Description</string>
    <string name="title_activity_won_auctions">WonAuctionsActivity</string>
    <string name="prefs_name">DBLoggedInFile</string>
    <string name="title_activity_active_auctions">Активни аукции</string>
    <string name="title_activity_check">CheckActivity</string>

</resources>