<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="solution.springforandroid.RegisterActivity" 
    android:background="@color/pozadinskaBoja">

    <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/greyTextView"
        android:layout_margin="5dp"
        android:inputType="none"
        android:text="@string/register_head_text"/>
  
    <EditText 
        android:id="@+id/firstNameText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/greyTextView"
        android:hint="@string/first_name_hint"
        android:layout_margin="5dp"
        android:layout_above="@+id/lastNameText"/>
    
    <EditText 
        android:id="@id/lastNameText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/greyTextView"
        android:hint="@string/last_name_hint"
        android:layout_margin="5dp"
        android:layout_above="@+id/usernameRegisterText"/>
    
    <EditText 
        android:id="@id/usernameRegisterText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/greyTextView"
        android:hint="@string/username_hint"
        android:layout_margin="5dp"
        android:layout_above="@+id/passwordRegisterText"/>
    
    <EditText 
        android:id="@id/passwordRegisterText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/greyTextView"
        android:hint="@string/password_hint"
        android:layout_margin="5dp"
        android:inputType="textPassword"
        android:layout_above="@+id/passwordRepeatText"/>
    
    <EditText 
        android:id="@id/passwordRepeatText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/greyTextView"
        android:hint="@string/repeat_password_hint"
        android:layout_margin="5dp"
        android:inputType="textPassword"
        android:layout_above="@+id/emailText"/>

    <EditText 
        android:id="@id/emailText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/greyTextView"
        android:hint="@string/email_hint"
        android:layout_margin="5dp"
        android:inputType="textEmailAddress"
        android:layout_above="@+id/birth"
        />
    
     <EditText 
        android:id="@id/birth"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/greyTextView"
        android:hint="@string/birth_hint"
        android:layout_margin="5dp"
        android:inputType="date"
        android:layout_alignParentBottom="true"
        android:layout_above="@+id/register_button_register"
        />
     
     <Button 
        android:id="@id/register_button_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:background="@color/greyTextView"
        android:layout_margin="5dp"
        android:layout_alignParentBottom="true"
        android:onClick="registerNewUser"
        />
    
</RelativeLayout>
