<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black" >
    

    <TextView 
        android:id="@+id/greetingText"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:text="@string/greeting_text"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/textColor"
        android:inputType="none"/>
    
    <EditText 
        android:id="@+id/usernameText"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
         android:textColor="@color/textColor"
        android:hint="@string/username_hint"
        android:layout_margin="5dp"
        android:layout_weight="10"/>
    
    <EditText 
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/textColor"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:layout_margin="5dp"
        android:layout_weight="10"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal"
        >
        
    <Button 
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_weight="50"
        android:background="@color/greyTextView"
        android:layout_margin="5dp"
        />
    
    <Button 
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:layout_weight="50"
        android:background="@color/greyTextView"
        android:layout_margin="5dp"
        android:onClick="startRegisterProcess"
        />
    
    </LinearLayout>
    
</LinearLayout>
