<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="onlinebidding.activities.ProfileActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name_hint"
            android:textColor="@color/textColor" />

        <EditText
            android:id="@+id/editTxtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textPersonName"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/txtSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name_hint"
            android:textColor="@color/textColor" />

        <EditText
            android:id="@+id/editTxtSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textPersonName"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_hint"
            android:textColor="@color/textColor" />

        <EditText
            android:id="@+id/editTxtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textPersonName"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_hint"
            android:textColor="@color/textColor" />

        <EditText
            android:id="@+id/editTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/txtBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birth_hint"
            android:textColor="@color/textColor" />

        <EditText
            android:id="@+id/editTxtDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="date"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/txtCredit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_hint"
            android:textColor="@color/textColor" />

        <EditText
            android:id="@+id/editTxtCredit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="text"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/txtActivated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnMyAuctions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="startWonAuctions"
            android:text="@string/won_auctions"
            android:textColor="@color/textColor" />
    </LinearLayout>

</ScrollView>