<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true" >

        <TextView
            android:id="@+id/txt_current_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/txt_current_price"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_current_price"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:textSize="50sp" />

        <LinearLayout
            android:id="@+id/group_new_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_price"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/txt_new_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/textColor"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_rise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_rise"
                android:textColor="@color/textColor" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_view_entrants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/group_new_price"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_check_entrants"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/txt_auction_creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_view_entrants"
            android:gravity="center"
            android:text="@color/textColor"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/group_item_informations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_auction_creator"
            android:layout_margin="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_auction_item_name_static"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_item_name"
                android:textColor="@color/textColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_auction_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/textColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_auction_item_description_static"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/txt_item_description"
                android:textColor="@color/textColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_auction_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/textColor"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_enter_auction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/group_item_informations"
            android:onClick="enterOrExitAuction"
            android:text="@string/enter_auction"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/txt_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_enter_auction"
            android:gravity="center"
            android:text="@color/textColor"
            android:textSize="40sp" />
    </RelativeLayout>

</ScrollView>